2011-06-20 mmichaud <michael.michaud@free.fr>
    * Change Tools>Analysis menu. Now contains the following plugins
        - com.vividsolutions.jump.workbench.ui.plugin.analysis.BufferPlugIn
	    - org.openjump.core.ui.plugin.tools.MultiRingBufferSelectedPlugIn
	    - org.openjump.core.ui.plugin.tools.PlumePlugIn
	    - com.vividsolutions.jump.workbench.ui.plugin.analysis.CalculateAreasAndLengthsPlugIn
	    - com.vividsolutions.jump.workbench.ui.plugin.analysis.ConvexHullPlugIn
	    - org.openjump.core.ui.plugin.tools.ConvexHullPlugIn
	    - com.vividsolutions.jump.workbench.ui.plugin.analysis.GeometryFunctionPlugIn
	    - com.vividsolutions.jump.workbench.ui.plugin.analysis.OverlayPlugIn
	    - org.openjump.core.ui.plugin.tools.IntersectPolygonLayersPlugIn
	    - com.vividsolutions.jump.workbench.ui.plugin.analysis.SpatialJoinPlugIn
	    - org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn
	    - com.vividsolutions.jump.workbench.ui.plugin.analysis.UnionPlugIn
	    - org.openjump.core.ui.plugin.tools.UnionByAttributePlugIn
	* Add icons to GenerateLogPlugIn and MosaicInternalFrame

2011-06-19 Matthias Scholz <ms@jammerhund.de>
	* MultiClickTool.displayMetrics()
		* Fix of bug 3034927 - Measure Tool Doesn't Comply With Snap

2011-06-18 mmichaud <michael.michaud@free.fr>
    * Fix LayerStyle2SLDPlugin and the corresponding xsl
      so that it works without xalan.
      To achieve that, the prefix of the user-defined namespace is now set to
      "oj:", whatever the namespace is.
    * Add LayerStyle2SLDPlugin and ImportSLDPlugIn in Layer>Style context menu
      with an icon from Giuseppe

2011-06-17 Matthias Scholz <ms@jammerhund.de>
	* update german translation

2011-06-13 Matthias Scholz <ms@jammerhund.de>
	* InstallSkinsPlugIn.initialize(): change from hardcoded look and feel to 
		retrieval of available look and feel's
	* i18n of the word "Skin" in the SkinOptionsPanel
	* Bugfix MultiClickTool.getShape():